# mlops_project_christa_toufic

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tasks.py
.github/.workflows/: ci.yaml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
config/: config.yaml
setup_scripts/: download_mlflow_data_and_dataset.py
src/api/: app.py  dependencies.py  endpoints.py  run_api.py  schemas.py
src/email_classifier/: app_core.py  config.py  core.py  main.py
src/email_classifier/classifier_model/: base_classifier.py  factory.py  logistic_classifier.py  sgd_classifier.py
src/email_classifier/data_handling/data_loader/: csv_loader.py
src/email_classifier/data_handling/preprocessor/: base_preprocessor.py
src/email_classifier/data_handling/vectorizer/: tfidf_vectorizer.py
src/email_classifier/data_loader/: __init__.py  base_loader.py  csv_loader.py  factory.py  json_loader.py
src/email_classifier/data_pipeline/data_loader/: __init__.py  base_loader.py  csv_loader.py  json_loader.py
src/email_classifier/data_pipeline/preprocessor/: base_preprocessor.py  email_preprocessor.py
src/email_classifier/data_pipeline/vectorizer/: base_text_vectorizer.py  bow_vectorizer.py  factory.py
src/email_classifier/pipelines/: base_pipeline.py  factory.py  inference_pipeline.py  training_pipeline.py
src/email_classifier/scripts/: inference_batch.py  training_batch.py
src/email_classifier/training/classifier_model/: base_classifier.py  factory.py  logistic_classifier.py  sgd_classifier.py
src/email_classifier/training/trainer/: Trainer.py  trainer.py
src/email_classifier/vectorizer/: base_text_vectorizer.py  factory.py  tfidf_vectorizer.py
src/scripts/: inference_batch.py  test_config.py  training_batch.py
src/setup_scripts/: download_mlflow_data_and_dataset.py
src/tests/: test_model.py
src/tests/tests_data_pipeline/: test_data_loader.py  test_preprocessor.py  test_vectorizer.py
src/utils/: mlf_utils.py
tests/tests_data_pipeline/: test_data_loader.py
