[tool.poetry]
name = "email-classifier"
version = "0.1.0"
description = ""
authors = ["christamatta <christa.matta17@gmail.com>", "touficfakhry <fakhrytoufic6@gmail.com>"]
packages = [{include = "email_classifier", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
loguru = "^0.7.3"
mlflow = "^2.19.0"
pydantic = "^2.10.3"
omegaconf = "^2.3.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
