[tool.poetry]
name = "email-classifier"
version = "0.1.0"
description = ""
authors = ["christamatta <christa.matta17@gmail.com>", "touficfakhry <fakhrytoufic6@gmail.com>"]
packages = [
    {include = "email_classifier", from = "src"},
    {include = "setup_scripts", from = "src"}
]
readme = "README.md"

[tool.poetry.scripts]
email-classifier = "email_classifier.main:main"
data-download = "setup_scripts.download_mlflow_data_and_dataset:main"
api = "api.run_api:main"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
loguru = "^0.7.3"
mlflow = "^2.19.0"
pydantic = "^2.10.3"
omegaconf = "^2.3.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.1"
mypy = "^1.13.0"
ruff = "^0.8.3"
pytest = "^8.3.4"
invoke = "^2.2.0"
types-requests = "^2.32.0.20241016"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F"] # Specify the types of rules to enforce
ignore = ["E501"] # Ignore line length warnings

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
